@@ -1,3 +1,7 @@
+2005-06-05  Tatsuya Kinoshita  <tats@vega.ocn.ne.jp>
+
+	* poe-xemacs.el: Load `timer' even if `timer-funcs' exists.
+
 2005-05-10  TAKAHASHI Kaoru  <kaoru@kaisei.org>
 
 	* poe.el (split-string): Import from Emacs 22. Add omit-nulls
